# python-learn

./: .gitignore  02_datatype.py  03_datatype_transform.py  11_set_type.py  12_condition.py  13_while.py  14_comprehensions.py  15_iterator.py  16_with.py  17_function.py  18_lambda.py  19_decorators.py  20_module.py  21_input_output.py  22_file.py  23_os.py  24_exception.py  25_object.py  26_namespace.py  27_type_hints.py  28_standard_library.py  29_regular_expression.py  30_mysql.py  31_socket_learn.py  32_socket_client.py  33_socket_server.py  34_thread_learn.py  README.md  agent_base.py  asyncio.py  base_grammer.py  data.pkl  datatype.py  dict_type.py  function.py  list_type.py  multi.pkl  operator.py  pyproject.toml  reverseWords.py  (+4 more)
python-learn/: pyproject.toml
