[project]
name = "python-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "mypy>=1.20.1",
    "mysql-connector-python>=9.0.0",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
]
